--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+NLog.Targets.KafkaAppender/bin
+NLog.Targets.KafkaAppender.Test/bin
+**/*.nuspec
+**/*.nupkg
