--- a/NLog.Targets.KafkaAppender.Test/nlog.config
+++ b/NLog.Targets.KafkaAppender.Test/nlog.config
@@ -8,8 +8,8 @@
   <targets>
     <target xsi:type="KafkaAppender"
             name="kafka"
-            topic="appname-${callsite:className=true:fileName=false:includeSourcePath=false:methodName=true}"
-            layout="ap1-${callsite:className=true:fileName=false:includeSourcePath=false:methodName=true}"
+            topic="${callsite:className=true:fileName=false:includeSourcePath=false:methodName=true}"
+            layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
             brokers="localhost:9092"
             debug="false"
             async="false"
