KafkaAppender uses NLog InternalLogger instead of Console.WriteLine

--- a/NLog.Targets.KafkaAppender.Test/nlog.config
+++ b/NLog.Targets.KafkaAppender.Test/nlog.config
@@ -1,20 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      throwConfigExceptions="true"
+      internalLogToConsole="true"
+      internalLogLevel="Warn"
       autoReload="true">
   <extensions>
     <add assembly="NLog.Targets.KafkaAppender"/>
   </extensions>
-  <targets>
+
+  <variable name="KafkaBrokers" value="localhost:9092" />
+  
+  <targets>   
     <target xsi:type="KafkaAppender"
             name="kafka"
-            topic="${callsite:className=true:fileName=false:includeSourcePath=false:methodName=true}"
+            topic="${logger}"
             layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
-            brokers="localhost:9092"
-            debug="false"
-            async="false"
-            >
-
+            brokers="${var:KafkaBrokers}"
+            async="false">
     </target>
   </targets>
   <rules>
