--- a/NLog.Targets.KafkaAppender.Test/nlog.config
+++ b/NLog.Targets.KafkaAppender.Test/nlog.config
@@ -17,7 +17,10 @@
             topic="${logger}"
             layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
             brokers="${var:KafkaBrokers}"
-            async="false">
+            async="false"
+			sslCertificateLocation=""
+            securityProtocol="plaintext">
+		
     </target>
   </targets>
   <rules>
