Use Layout for sslKeyPassword, and update readme.

--- a/NLog.Targets.KafkaAppender.Test/nlog.config
+++ b/NLog.Targets.KafkaAppender.Test/nlog.config
@@ -18,9 +18,12 @@
             layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
             brokers="${var:KafkaBrokers}"
             async="false"
-	    sslCertificateLocation=""
+	          sslCertificateLocation=""
+            SslCaLocation=""
+            SslKeyLocation=""
+            SslKeyPassword=""
             securityProtocol="plaintext">
-		
+
     </target>
   </targets>
   <rules>
