Updated to Confluent.Kafka ver. 2.4.0 with LibSsl ver. 3

--- a/NLog.Targets.KafkaAppender.Test/nlog.config
+++ b/NLog.Targets.KafkaAppender.Test/nlog.config
@@ -11,19 +11,14 @@
 
   <variable name="KafkaBrokers" value="localhost:9092" />
   
-  <targets>   
+  <targets>
     <target xsi:type="KafkaAppender"
             name="kafka"
             topic="${logger}"
             layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
             brokers="${var:KafkaBrokers}"
-            async="false"
-	          sslCertificateLocation=""
-            SslCaLocation=""
-            SslKeyLocation=""
-            SslKeyPassword=""
-            securityProtocol="plaintext">
-
+            async="false">
+      <setting key="client.id" value="NLog_${machinename}" /> <!-- Multiple allowed -->
     </target>
   </targets>
   <rules>
