--- a/NLog.Targets.KafkaAppender.Test/nlog.config
+++ b/NLog.Targets.KafkaAppender.Test/nlog.config
@@ -10,7 +10,7 @@
   </extensions>
 
   <variable name="KafkaBrokers" value="localhost:9092" />
-  
+
   <targets>
     <target xsi:type="KafkaAppender"
             name="kafka"
@@ -18,7 +18,7 @@
             layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
             brokers="${var:KafkaBrokers}"
             async="false">
-      <setting key="client.id" value="NLog_${machinename}" />
+      <setting key="client.id" value="NLog_${machinename}" /><!-- Multiple allowed -->
     </target>
   </targets>
   <rules>
